font issue resolved

--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Poppins&display=swap");
 
 body {
 	font-family: "Poppins", sans-serif;
@@ -7,7 +7,6 @@ body {
 	font-weight: 400;
 	color: #23214c;
 	background-color: #23214c;
-
 }
 
 body a {
@@ -1546,27 +1545,61 @@ footer {
 	border-radius: 10px;
 }
 
-.patrons{
+.patrons {
 	display: flex;
 	flex-direction: row;
-	justify-content:space-evenly;
+	justify-content: space-evenly;
 	align-items: center;
 }
-.patrons img{
+.patrons img {
 	width: 15%;
 }
-@media screen and (max-width:1020px){
-	.patrons img{
+@media screen and (max-width: 1020px) {
+	.patrons img {
 		width: 20%;
 	}
 }
-
 
 summary {
 	font-size: 1.25rem;
 	font-weight: 600;
 	background-color: #fafafa;
-	background-image: radial-gradient(circle at 40% 91%, rgba(251, 251, 251,0.04) 0%, rgba(251, 251, 251,0.04) 50%,rgba(229, 229, 229,0.04) 50%, rgba(229, 229, 229,0.04) 100%),radial-gradient(circle at 66% 97%, rgba(36, 36, 36,0.04) 0%, rgba(36, 36, 36,0.04) 50%,rgba(46, 46, 46,0.04) 50%, rgba(46, 46, 46,0.04) 100%),radial-gradient(circle at 86% 7%, rgba(40, 40, 40,0.04) 0%, rgba(40, 40, 40,0.04) 50%,rgba(200, 200, 200,0.04) 50%, rgba(200, 200, 200,0.04) 100%),radial-gradient(circle at 15% 16%, rgba(99, 99, 99,0.04) 0%, rgba(99, 99, 99,0.04) 50%,rgba(45, 45, 45,0.04) 50%, rgba(45, 45, 45,0.04) 100%),radial-gradient(circle at 75% 99%, rgba(243, 243, 243,0.04) 0%, rgba(243, 243, 243,0.04) 50%,rgba(37, 37, 37,0.04) 50%, rgba(37, 37, 37,0.04) 100%),linear-gradient(90deg, rgb(34, 222, 237),rgb(135, 89, 215));
+	background-image: radial-gradient(
+			circle at 40% 91%,
+			rgba(251, 251, 251, 0.04) 0%,
+			rgba(251, 251, 251, 0.04) 50%,
+			rgba(229, 229, 229, 0.04) 50%,
+			rgba(229, 229, 229, 0.04) 100%
+		),
+		radial-gradient(
+			circle at 66% 97%,
+			rgba(36, 36, 36, 0.04) 0%,
+			rgba(36, 36, 36, 0.04) 50%,
+			rgba(46, 46, 46, 0.04) 50%,
+			rgba(46, 46, 46, 0.04) 100%
+		),
+		radial-gradient(
+			circle at 86% 7%,
+			rgba(40, 40, 40, 0.04) 0%,
+			rgba(40, 40, 40, 0.04) 50%,
+			rgba(200, 200, 200, 0.04) 50%,
+			rgba(200, 200, 200, 0.04) 100%
+		),
+		radial-gradient(
+			circle at 15% 16%,
+			rgba(99, 99, 99, 0.04) 0%,
+			rgba(99, 99, 99, 0.04) 50%,
+			rgba(45, 45, 45, 0.04) 50%,
+			rgba(45, 45, 45, 0.04) 100%
+		),
+		radial-gradient(
+			circle at 75% 99%,
+			rgba(243, 243, 243, 0.04) 0%,
+			rgba(243, 243, 243, 0.04) 50%,
+			rgba(37, 37, 37, 0.04) 50%,
+			rgba(37, 37, 37, 0.04) 100%
+		),
+		linear-gradient(90deg, rgb(34, 222, 237), rgb(135, 89, 215));
 	color: #fff;
 	padding: 1rem;
 	margin-bottom: 1rem;
@@ -1575,29 +1608,37 @@ summary {
 	text-align: left;
 	cursor: pointer;
 	position: relative;
-  }
-  p { text-align: left; }
-  details[open] summary ~ * {
-	animation: sweep .5s ease-in-out;
-  }
-  @keyframes sweep {
-	0%    {opacity: 0; margin-top: -10px}
-	100%  {opacity: 1; margin-top: 0px}
-  }
-  details > summary::after {
+}
+p {
+	text-align: left;
+}
+details[open] summary ~ * {
+	animation: sweep 0.5s ease-in-out;
+}
+@keyframes sweep {
+	0% {
+		opacity: 0;
+		margin-top: -10px;
+	}
+	100% {
+		opacity: 1;
+		margin-top: 0px;
+	}
+}
+details > summary::after {
 	position: absolute;
 	content: "+";
 	right: 20px;
-  }
-  details[open] > summary::after {
+}
+details[open] > summary::after {
 	position: absolute;
 	content: "-";
 	right: 20px;
-  }
-  details > summary::-webkit-details-marker {
+}
+details > summary::-webkit-details-marker {
 	display: none;
-  }
-  .sign {
+}
+.sign {
 	position: absolute;
 	display: flex;
 	font-family: "Montserrat", sans-serif;
