--- a/style.css
+++ b/style.css
@@ -1625,7 +1625,7 @@ details[open] summary ~ * {
 		margin-top: 0px;
 	}
 }
-details > summary::after {
+/* details > summary::after {
 	position: absolute;
 	content: "+";
 	right: 20px;
@@ -1634,7 +1634,7 @@ details[open] > summary::after {
 	position: absolute;
 	content: "-";
 	right: 20px;
-}
+} */
 details > summary::-webkit-details-marker {
 	display: none;
 }
