--- a/style.css
+++ b/style.css
@@ -60,7 +60,8 @@ body a:hover {
 .menu-wrapper {
 	transition: background-color 0.2s linear;
 	z-index: 99 !important;
-	background-color: #031428;
+	/* background-color: #031428; */
+	background-color: #000;
 
 	width: 100% !important;
 	top: 0;
@@ -222,11 +223,13 @@ body a:hover {
 /* END GENERAL SECTION */
 
 /* HOME SECTION */
-
+#home{
+	background-color: #000;
+}
 .intro-page {
 	padding-bottom: 170px;
 	min-height: calc(100vh - 170px);
-	background-color: #031428;
+	background-color: #000;
 	background-image: url(images/bg.gif);
 	background-repeat: repeat;
 	background-position: center top;
